--- a/source/assets/stylesheets/layout/_header.scss
+++ b/source/assets/stylesheets/layout/_header.scss
@@ -1,7 +1,6 @@
 .header {
   margin: 1em 0;
   padding: 0;
-  height: 3.8rem;
   &__logo {
     display:inline-block;
     margin: 0 0;
